<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.platuzic.groupfinder.auth.viewmodel.LoginViewModel" />

        <variable
            name="fragment"
            type="com.platuzic.groupfinder.auth.view.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.view.LoginFragment">

        <TextView
            android:id="@+id/Fragment_Login_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/welcome_back"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Fragment_Login_GuidHor05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="horizontal"/>

        <EditText
            android:id="@+id/Fragment_Login_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/Fragment_Login_GuidHor05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <EditText
            android:id="@+id/Fragment_Login_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/Fragment_Login_GuidHor05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_register"
            android:textSize="16sp"
            android:onClick="@{() -> fragment.navigateToRegister()}"
            app:layout_constraintStart_toStartOf="@id/Fragment_Login_Password"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Login_Password"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/login"
            android:onClick="@{() -> viewModel.login()}"
            android:layout_margin="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>