<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.platuzic.groupfinder.groupposts.viewmodel.GroupsViewModel" />

        <variable
            name="fragment"
            type="com.platuzic.groupfinder.groupposts.view.GroupsFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".groupposts.view.GroupsFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Fragment_Groups_Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/groups"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_margin="30dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:backgroundTint="@android:color/transparent"
                    android:onClick="@{() -> viewModel.logout()}"

                    android:text="Logout"
                    android:textColor="@color/background_dark"
                    app:layout_constraintTop_toTopOf="@id/Fragment_Groups_Title"
                    app:layout_constraintStart_toStartOf="@id/Fragment_Groups_Title"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_add_24"
                    android:backgroundTint="@android:color/transparent"
                    android:onClick="@{() -> fragment.addGroup()}"
                    android:layout_margin="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/Fragment_Groups_Search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:hint="@string/search"
                    android:inputType="text"
                    android:padding="15dp"
                    android:text="@={viewModel.searchText}"
                    android:onTextChanged="@{() -> viewModel.searchTextQuery()}"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Fragment_Groups_Title" />

                <TextView
                    android:id="@+id/Fragment_Groups_JoinedGroupsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/joined_groups"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Fragment_Groups_Search" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/Fragment_Groups_JoinedGroupsNestedScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/Fragment_Groups_JoinedGroupsTitle"
                    app:layout_constraintTop_toBottomOf="@id/Fragment_Groups_JoinedGroupsTitle">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/Fragment_Groups_JoinedGroupsRV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </androidx.core.widget.NestedScrollView>

                <TextView
                    android:id="@+id/Fragment_Groups_NotJoinedGroupsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/not_joined_groups"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Fragment_Groups_JoinedGroupsNestedScrollView" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/Fragment_Groups_NotJoinedGroupsNestedScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/Fragment_Groups_NotJoinedGroupsTitle"
                    app:layout_constraintTop_toBottomOf="@id/Fragment_Groups_NotJoinedGroupsTitle"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/Fragment_Groups_NotJoinedGroupsRV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                </androidx.core.widget.NestedScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>